--- a/atp3/views/customer/reg.ejs
+++ b/atp3/views/customer/reg.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Admin Registration</title>
+	<title>Customer Registration</title>
 </head>
 <body>
-	<h1>Admin Registration</h1>
+	<h1>Customer Registration</h1>
 
 	<form method="post" >
 		<table>
