--- a/atp3/views/admin/home.ejs
+++ b/atp3/views/admin/home.ejs
@@ -1,1 +1,15 @@
-<h2>Admin home</h2>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Admin Home</title>
+</head>
+<body>
+	<h1>Welcome in Admin Home</h1> <br><br>
+
+    <a href="/admin/removeCustomer">Remove Customer |</a>
+    <a href="/admin/addram">Add Ram |</a>
+    <a href="/admin/addmonitor">Add Monitor |</a>
+    <a href="/admin/addstorage">Add Storage |</a>
+    <a href="/admin/addgraphic">Add Graphic |</a>
+</body>
+</html>
