--- a/atp3/views/admin/home.ejs
+++ b/atp3/views/admin/home.ejs
@@ -7,9 +7,10 @@
 	<h1>Welcome in Admin Home</h1> <br><br>
 
     <a href="/admin/removeCustomer">Remove Customer |</a>
-    <a href="/admin/addram">Add Ram |</a>
-    <a href="/admin/addmonitor">Add Monitor |</a>
+    <a href="/admin/addcomponents">Add Components |</a>
+    <a href="/admin/logout">LOGOUT</a>
+    <!-- <a href="/admin/addmonitor">Add Monitor |</a>
     <a href="/admin/addstorage">Add Storage |</a>
-    <a href="/admin/addgraphic">Add Graphic |</a>
+   <a href="/admin/addgraphic">Add Graphic |</a> --> 
 </body>
 </html>
