--- a/atp3/views/admin/removeCustomer.ejs
+++ b/atp3/views/admin/removeCustomer.ejs
@@ -32,7 +32,7 @@
             <td><%= user[i].password %></td>
 			<td>
 				<!-- <a href="/emp/edit/<%= user[i].id %>"> EDIT </a> |  -->
-				<a href="/emp/delete/<%= user[i].id %>"> DELETE </a> | 
+				<a href="/admin/delete/<%= user[i].id %>"> DELETE </a> | 
 				<!-- <a href="/user/details/<%= user[i].id %>"> Details </a> -->
 			</td>
 		</tr>
