--- a/atp3/views/customer/home.ejs
+++ b/atp3/views/customer/home.ejs
@@ -1,1 +1,63 @@
-<h2>Customer Home</h2>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>userlist</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+</head>
+<body>
+	<h1>Employee List</h1>
+
+	<a href="/admin/adminhome">Back</a> |
+	<a href="/logout">logout</a>
+
+<br><br>
+Search:<input type="text" name="" id = "empsearch" placeholder="empsearch..." >
+<br><br>
+	<table border="1">
+		<tr>
+			<td>ID</td>
+			<td>CATEGORIES</td>
+			<td>COMPANY</td>
+            <td>COMPONENTS</td>
+            <td>DESCRIPTION</td>
+            <td>REVIEW</td>
+            <td>ACTION</td>
+		</tr>
+
+	<% for(var i=0; i< user.length; i++){ %>
+		<tr>
+			<td><%= user[i].id %></td>
+			<td><%= user[i].categories %></td>
+            <td><%= user[i].company %></td>
+            <td><%= user[i].components %></td>
+            <td><input type="text" name="review"></td>
+			<td>
+				<!-- <a href="/emp/edit/<%= user[i].id %>"> EDIT </a> |  -->
+				<a href="/admin/delete/<%= user[i].id %>"> submit </a> | 
+				<!-- <a href="/user/details/<%= user[i].id %>"> Details </a> -->
+			</td>
+		</tr>
+
+	<% } %>
+	</table>
+	<script type="text/javascript">
+		$("#empsearch").on("keyup",function(){
+	
+			var value = $(this).val();
+			$("table tr").each(function(records)
+			{
+				if(records != 0)
+				{
+					var id = $(this).find("td:eq(3)").text();
+					if(id.indexOf(value)!==0){
+						$(this).hide();
+					}
+					else{
+						$(this).show();
+					}
+				}
+			});
+		});
+	</script>
+</body>
+</html>
