--- a/atp3/views/admin/home.ejs
+++ b/atp3/views/admin/home.ejs
@@ -8,7 +8,7 @@
 
     <a href="/admin/removeCustomer">Remove Customer |</a>
     <a href="/admin/addcomponents">Add Components |</a>
-    <a href="/admin/logout">LOGOUT</a>
+    <a href="/login">LOGOUT</a>
     <!-- <a href="/admin/addmonitor">Add Monitor |</a>
     <a href="/admin/addstorage">Add Storage |</a>
    <a href="/admin/addgraphic">Add Graphic |</a> --> 
