--- a/atp3/views/admin/reg.ejs
+++ b/atp3/views/admin/reg.ejs
@@ -26,8 +26,9 @@
 			</tr>
 			<tr>
 				
-				<td></td>
+				<td><bold><a href="/login">BACK </a></bold></td>
 				<td><input type="submit" name="submit" value="Submit"></td>
+				
 			</tr>
 			
 		</table>
