--- a/atp3/views/customer/home.ejs
+++ b/atp3/views/customer/home.ejs
@@ -11,7 +11,7 @@
 	<a href="/logout">logout</a>
 
 <br><br>
-Search:<input type="text" name="" id = "empsearch" placeholder="empsearch..." >
+Search:<input type="text" name="" id = "empsearch" placeholder="Component Search...." >
 <br><br>
 	<table border="1">
 		<tr>
