--- a/atp3/views/customer/reg.ejs
+++ b/atp3/views/customer/reg.ejs
@@ -26,7 +26,7 @@
 			</tr>
 			<tr>
 				
-				<td></td>
+					<td><bold><a href="/login">BACK </a></bold></td>
 				<td><input type="submit" name="submit" value="Submit"></td>
 			</tr>
 			
